# goli

./: .gitignore  CMakeLists.txt  README.md  build.sh  instruction.txt  progress.md
include/: app.hpp  app_interface.hpp  camera.hpp  game.hpp  game_interface.hpp  goli.hpp  gui_app_config.hpp  gui_interface.hpp  render_context_interface.hpp  shader.hpp  text.hpp  utils.hpp
src/: app.cpp  app_demo.cpp  app_interface.cpp  camera.cpp  camera_demo.cpp  game.cpp  goli.cpp  launch.cpp  quad.cpp  render_context_interface.cpp  shader.cpp  test_game.cpp  text.cpp  utils.cpp  viewApp.cpp
src/shader/: app.fs  app.vs  goli.vs  text.vs  view_app.fs  view_app.vs
